# hn-digest

./: .gitignore  README.md  build_html.py  hn_scraper.py  io_helper.py  llm.py  main.py  mock_payload.py  prompt.py  pyproject.toml  pytest.ini  requirements.txt  send_email.py  test_build_html.py  test_hn_scraper.py  test_llm.py  test_send_email.py  write_to_file.py
.github/workflows/: send_email.yml
src/hn_digest/: build_html.py  hn_scraper.py  llm.py  main.py  prompt.py  send_email.py
src/hn_digest/templates/: template.html
test/: html_content.html  llm_response.txt  llm_response_.txt  scraped_.txt
test/write/: llm_response_.txt  scraped_.txt
tests/: test_build_html.py  test_hn_scraper.py  test_llm.py  test_send_email.py
tests/write/: email_.html  html_content_.html  llm_response_.txt  scraped_.txt
