[project]                                                                                                                 
  name = "hn-digest"
  version = "0.1.0"                                                                                                         
  requires-python = ">=3.9"                                                                                                 
  dependencies = [                                                                                                          
      "requests",                                                                                                           
      "beautifulsoup4",
      "python-dotenv",                                                                                                      
      "google-genai",
  ]                                                                                                                         
                  
  [project.scripts]
  hn-digest = "hn_digest.main:run"

  [tool.pytest.ini_options]                                                                                                 
  pythonpath = ["src"]

  [tool.setuptools.package-data]
  "hn_digest" = ["templates/*.html"] 